[package]
name = "cliptools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
human-panic = "1.0"  # TODO move this to a binary-only dependency
cfg-if = "1.0"
copypasta = { path = "../copypasta" }
atty = "0.2"
ansi_term = "0.12"

[[bin]]
name = "cliptools"
path = "bin/main.rs"
