[package]
name = "cliptools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ansi_term = "0.12"
arboard = { path = "../arboard", features = ['wayland-data-control'] }
atty = "0.2"
cfg-if = "1.0"
clap = "2.33"
# env_logger = "0.8"
log = "0.4"
human-panic = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[[bin]]
name = "cliptools"
path = "bin/main.rs"
